# virtui-manager

./: .gitignore  AGENTS.md  CONTRIBUTING.md  FEATURES.md  MANIFEST.in  README.md  check_constants.sh  config.py  connection_manager.py  constants.py  default.nix  dialog.css  flake.nix  libvirt_utils.py  mkdocs.yml  network_manager.py  pyproject.toml  requirements.txt  setup.cfg  snapshot.css  storage_manager.py  tui.css  tui.py  update_version.sh  utils.py  vm_actions.py  vm_info.py  vm_queries.py  vm_service.py  vmanager.css  vmanager.py  vmanager_cmd.py  vmcard.css  vmcard.py  vmcard_dialog.py  webconsole_manager.py
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  flatpak.yml  pr-check.yml
checks/: check_constants.py  check_versions.py  find_missing_msgstr.py  remove_unused_constants.py  update_media.py
docs/: index.html  media.html  style.css
docs/manual/: 404.html  app_configuration.md  config-sample.yaml  index.html  index.md  installation.md  main_window.md  sitemap.xml  style.css
documentation/manual/: app_configuration.md  app_installation.md  bulk_ops.md  cli.md  index.md  (+14 more)
flathub/: Makefile  generate_json_py312.py  io.github.aginies.virtui-manager.appdata.xml  io.github.aginies.virtui-manager.desktop  io.github.aginies.virtui-manager.yml  python3-requirements.yaml
hooks/: copy_ext_files.py
modals/: base_modal.py  config_modal.py  connection_modals.py  disk_pool_modals.py  howto_ssh_modal.py  log_modal.py  migration_modals.py  network_modals.py  server_modals.py  server_prefs_modals.py  utils_modals.py  vmanager_modals.py  vmanager_select_server_modals.py  vmanager_virsh_modals.py  vmanager_vmdetails_modals.py
nix/: default.nix  flake.nix  shell.nix  test-nix.nix
tests/: run_tests.py  test_alpine_kernel_extraction.py  test_alpine_provider.py  test_async_validation.py  test_auto_install_reboot_handling.py  test_cmdline_generation.py  test_config.py  test_constants.py  test_direct_kernel_boot_action.py  test_direct_kernel_boot_cmdline.py  test_firmware_manager.py  test_generic_provider.py  test_machine_type_detection.py  test_multi_os_architecture.py  test_opensuse_agama_product.py  test_opensuse_integration.py  test_pipeline.py  test_provider_selection.py  test_provisioning_registry.py  test_sles_fix.py  test_template_editing.py  test_template_management.py  test_ubuntu_kernel_extraction.py  test_utils.py  test_vm_actions.py  test_vm_provisioner_download.py  test_vm_provisioner_nvram.py  test_vm_queries.py  test_vm_service.py  test_vmanager.py  test_vmanager_cmd.py  test_vmcard.py  test_worker_manager.py
website/: media.html
(+174 files in other folders)
